--- a/Gallery1.html
+++ b/Gallery1.html
@@ -95,7 +95,7 @@ footer{
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" href="index1.html" id="navi">Home</a>
+          <a class="nav-link active" href="index.html" id="navi">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#foot" id="navi">Contact</a>
