--- a/Feedback1.html
+++ b/Feedback1.html
@@ -108,7 +108,7 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" href="index1.html" id="navi">Home</a>
+          <a class="nav-link active" href="index.html" id="navi">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="Gallery1.html" id="navi">Gallery</a>
